--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "DEBUG=the-social-bean:* nodemon ./bin/www"
   },
   "dependencies": {
+    "@uppy/core": "^0.26.0",
     "bcrypt": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.18.2",
+    "cloudinary": "^1.11.0",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
@@ -19,10 +21,13 @@
     "hbs": "~4.0.1",
     "mongoose": "~4.13.4",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
+    "multer-storage-cloudinary": "^2.2.1",
     "node-sass-middleware": "0.11.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "uppy": "^0.26.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
